# pygeko

./: .readthedocs.yaml  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
docs/: .gitignore  requirements.txt
docs/source/: conf.py  conf_gem.py  index.rst  todo.md
docs/source/guide/: cli.md  exporting.md  exporting.rst  installation.rst  quickstart.md  rpi_optimization.rst  tuning.rst  tutorial.md
docs/source/reference/: api.rst
docs/source/theory/: gck_method.rst
src/pygeko/: __about__.py  __init__.py  catgck.py  gck_kriger.py  gplot.py  kdata.py  kgrid.py  kprofile.py  lsgck.py  models.py  png_to_csv.py  prep.py  utils.py
src/pygeko/examples/: mb_restore_kdata.py  mb_tune.py  mb_workflow.py  msh_restore_kdata.py  msh_save_kdata.py  msh_tune.py  msh_workflow.py
